# Android_NDK_JNI

./: .gitignore  ALGORITHM_DOCUMENTATION.md  CMake简易指南.MD  README.MD  build.gradle  gradle.properties  settings.gradle  错误记录.MD
.trae/documents/: SECURITY_INTEGRATION_GUIDE.md  curl_README.md  tools_README.md
app/: build.gradle
app/src/androidTest/java/me/shetj/sdk/ffmepg/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cacert.pem
app/src/main/cpp/: CMakeLists.txt  LogKit.h  Register.cpp  Register.h  TimeUtils.h  beanH.h  native-lib.cpp
app/src/main/java/me/shetj/sdk/ffmepg/demo/: AppSigning.java  AppSigning.kt  DataBean.java  ISoundTouch.kt  MainActivity.kt  RecordUtils.kt  STKit.kt  WebRtcNSActivity.kt  WebRtcNsKit.kt
app/src/main/res/layout/: activity_main.xml  activity_web_rtc_ns.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/me/shetj/sdk/ffmepg/demo/: ExampleUnitTest.kt
ffmpeg/: README.MD  build.gradle  uploadLocal.gradle
ffmpeg-lite-kt/: README.MD  build.gradle  uploadLocal.gradle
ffmpeg-lite-kt/src/androidTest/java/me/shetj/ffmpeg/kt/: ExampleInstrumentedTest.kt
ffmpeg-lite-kt/src/main/: AndroidManifest.xml
ffmpeg-lite-kt/src/main/java/io/microshow/rxffmpeg/: RxFFmpegCommandList.kt  RxFFmpegCommandSupport.kt  RxFFmpegInvoke.kt
ffmpeg-lite-kt/src/main/java/io/microshow/rxffmpeg/player/: BaseMediaPlayer.kt  Helper.kt  IMediaPlayer.kt  MeasureHelper.kt  RxFFmpegPlayer.kt  RxFFmpegPlayerController.kt  RxFFmpegPlayerControllerImpl.kt  RxFFmpegPlayerImpl.kt  RxFFmpegPlayerView.kt  ScaleTextureView.kt  SystemMediaPlayer.kt  SystemMediaPlayerImpl.kt
ffmpeg-lite-kt/src/main/java/me/shetj/ffmpeg/: CommandKt.kt  CoroutineKt.kt  FFmpegCommandList.kt  FFmpegKit.kt  FFmpegState.kt
ffmpeg-lite-kt/src/main/java/me/shetj/ffmpeg/kt/: CommandKt.kt  CoroutineKt.kt  FFmpegKit.kt  RunState.kt
ffmpeg-lite-kt/src/test/java/me/shetj/ffmpeg/kt/: ExampleUnitTest.kt
ffmpeg/src/main/: CMakeLists.txt
ffmpeg/src/main/jni/: ffmpeg-lib.cpp
ffmpeglibrary/: build.gradle
ffmpeglibrary/src/androidTest/java/me/shetj/sdk/ffmepg/: ExampleInstrumentedTest.kt
ffmpeglibrary/src/main/: AndroidManifest.xml  CMakeLists.txt
ffmpeglibrary/src/main/java/me/shetj/sdk/ffmepg/: FFmpegKit.kt
ffmpeglibrary/src/main/jni/: ffmpeg-lib.cpp  me_shetj_sdk_ffmepg_FFmpegKit.h
ffmpeglibrary/src/main/jni/include/fftools/: config.h
ffmpeglibrary/src/test/java/me/shetj/sdk/ffmepg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lame/: .gitignore  README.MD  build.gradle  uploadLocal.gradle
lame/src/androidTest/java/me/shetj/ndk/lame/: ExampleInstrumentedTest.kt
lame/src/main/: AndroidManifest.xml
lame/src/main/java/: CMakeLists.txt
lame/src/main/java/me/shetj/ndk/lame/: LameUtils.kt
lame/src/main/jni/: lame_util.c  me_shetj_recorder_util_LameUtils.h
lame/src/main/jni/libmp3lame_3.100/: VbrTag.c  bitstream.c  encoder.c  fft.c  gain_analysis.c  id3tag.c  lame.c  lame.rc  newmdct.c  presets.c  psymodel.c  quantize.c  quantize_pvt.c  reservoir.c  set_get.c  tables.c  takehiro.c  util.c  vbrquantize.c  version.c
lame/src/test/java/me/shetj/ndk/lame/: ExampleUnitTest.kt
soundTouch/: README.MD  build.gradle  uploadLocal.gradle
soundTouch/src/androidTest/java/me/shetj/ndk/soundtouch/: ExampleInstrumentedTest.kt
soundTouch/src/main/: AndroidManifest.xml
soundTouch/src/main/cpp/: CMakeLists.txt  SoundTouchKit.cpp  me_shetj_ndk_soundtouch_SoundTouch.h  soundtouch-jni.cpp
soundTouch/src/main/cpp/soundtouch/: STTypes.h
soundTouch/src/main/java/me/shetj/ndk/soundtouch/: ISoundTouch.kt  STKit.kt  SoundTouch.kt  SoundTouchKit.kt
soundTouch/src/test/java/me/shetj/ndk/soundtouch/: ExampleUnitTest.kt  SoundTouchTest.kt
tools/: README.MD  SECURITY_INTEGRATION_GUIDE.md  build.gradle  uploadLocal.gradle
tools/src/androidTest/java/me/shetj/sdk/: ExampleInstrumentedTest.kt
tools/src/main/: AndroidManifest.xml  CMakeLists.txt
tools/src/main/cpp/curl/: CLibcurlCallback.cpp  CLibcurlCallback.h  Clibcurl.cpp  Clibcurl.h  Curl-lib.cpp  CurlTools.cpp  CurlTools.h  HttpModule.cpp  HttpModule.h  http.cpp  http.h  java_interop.h  logging.cpp  logging.h  utils.cpp  utils.h
tools/src/main/cpp/json/: JsonKit.cpp  JsonKit.h  jsonkit.cpp  jsonkit.h
tools/src/main/cpp/my/: Curl-lib.cpp  Json-lib.cpp
tools/src/main/java/me/shetj/sdk/curl/: CUrlKit.kt  CurlHttp.kt  HttpRequest.kt  README.md
tools/src/main/java/me/shetj/sdk/json/: JsonKit.kt
tools/src/main/java/me/shetj/sdk/utils/: Uitls.kt  Utils.kt
tools/src/test/java/me/shetj/sdk/: ExampleUnitTest.kt
tools/src/test/java/me/shetj/sdk/curl/: CurlHttpTest.kt
tools/src/test/java/me/shetj/sdk/utils/: SecurityTest.kt
webrtc-ns/: build.gradle  uploadLocal.gradle
webrtc-ns/src/main/cpp/: CMakeLists.txt  ns.cpp
webrtc-ns/src/main/cpp/webrtc_ns/: audio_buffer.cc  noise_suppressor.cc  noise_suppressor.h  ns_common.h
webrtc-ns/src/main/java/com/shetj/webrtc/ns/: WebRTCNS.kt  WebRtcNs.kt
